--- a/EnvVars/EnvVars.csproj
+++ b/EnvVars/EnvVars.csproj
@@ -195,10 +195,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\CertificateFactory.cs" />
+    <Compile Include="Utils\CertificateFactory.cs" />
     <Compile Include="Models\RoleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helpers\ServiceManagementRequest.cs" />
+    <Compile Include="Utils\ServiceManagementRequest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
