--- a/EnvVars.Tests/EnvVars.Tests.csproj
+++ b/EnvVars.Tests/EnvVars.Tests.csproj
@@ -60,7 +60,9 @@
       <Name>EnvVars</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
